# SURAJ

./: Suraj.db  main.py
SURAJ/: pyproject.toml  sqliter.py
SURAJ App/: main.py  pyproject.toml
SURAJ App/main.dist/static/js/: dashboard.js
SURAJ App/static/css/: dashboard.css
SURAJ App/templates/: dashboard.html
SURAJ/static/css/: base.css
SURAJ/templates/pages/: download.html  support.html
static/css/: download.css  home.css  support.css
templates/: base.html
templates/pages/: home.html
